<resources>
    <string name="app_name">Attendance Management App</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="edit_str">edit</string>
    <string name="sett_str">settings</string>
    <string name="my_help">My Help</string>
    <string name="login">Login</string>
    <string name="Signup">Sign Up</string>
    <string name="how">How We Work?</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="Remember">Remember Me</string>
    <string name="forgot_password">Forget Password?</string>
    <string name="create_account">Create   Account</string>
    <string name="enter_fullname">Enter Fullname</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="haveaccount">Have an account?</string>
    <string name="next">Next</string>
    <string name="genderr">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="age">Select You Age</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="create_accoun">Create Account</string>
    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter One Time Password Sent\n On Registered Number</string>
    <string name="Verify">Verify Code</string>
    <string name="forget_password_detail">Provide Your Accounts Email For Which You Want To Reset Your Password!</string>
    <string name="make_selection">Make\nSelection</string>
    <string name="make_selection_detail">Slect Which Contact Details We Use To Reset Your Password?</string>
    <string name="via_sms">Via SMS</string>
    <string name="new_credentials_detail">Your Identity Has Been Verified!\n Set You New Password</string>
    <string name="new_credentials">New\nCredentials</string>
    <string name="password_updated">Password\nUpdated</string>
    <string name="password_updated_success_message">You Password Has Been Updated!</string>
    <string name="via_mail">Via Mail</string>
    <string name="PrincipalSignUp">Principal Sign UP</string>
    <string name="professor">Professor</string>
    <string name="hod">HOD</string>
    <string name="student">Student</string>
    <string name="select_branch">Select Branch</string>
    <string name="select_passout">Select Pass Out Year (if Student)</string>
    <array name="branch">
        <item>Computer Engineering</item>
        <item>IT Engineering</item>
        <item>Chemical Engineering</item>
        <item>Electronics And Communication Engineering</item>
        <item>Power Electronics</item>
        <item>Computer Engineering</item>
        <item>Mechanical Engineering</item>
        <item>Civil Engineering</item>
        <item>Instrumentation And Control Engineering</item>
        <item>Electrical Engineering</item>
    </array>
    <array name="Year">
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </array>
</resources>