<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:padding="30dp"
    android:background="@drawable/background"
    tools:context=".loginsignup.FirstScreenActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/first_icon"
            android:src="@drawable/logo"/>

        <TextView
            android:id="@+id/splashtext1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/bungee"
            android:text="E-Attendance App"
            android:textAlignment="center"
            android:textColor="@color/textcolor"
            android:textSize="25dp"
            android:textStyle="italic" />
        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/start_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#00BCD4"
                android:fontFamily="sans-serif-black"
                android:onClick="callLoginScreen"
                android:text="@string/login"
                android:textColor="@color/white"
                android:transitionName="transition_login"
                app:backgroundTint="@color/colorPrimary" />

            <Button
                android:id="@+id/start_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/cardview_light_background"
                android:fadeScrollbars="true"
                android:fontFamily="sans-serif-black"
                android:onClick="callSignUpScreen"
                android:text="@string/Signup"
                android:textColor="@color/white"
                android:transitionName="transition_SignUp"
                app:backgroundTint="@color/colorPrimary" />

        </LinearLayout>
        <Button
            android:id="@+id/SignUpPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:fontFamily="sans-serif-black"
            android:text="@string/PrincipalSignUp"
            android:transitionName="transition_SignUp"
            android:textColor="@color/colorPrimary" />
        <Button
            android:id="@+id/start_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:fontFamily="sans-serif-black"
            android:text="@string/how"
            android:transitionName="transition_SignUp"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</ScrollView>