<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:scrollbars="none"
    android:background="@drawable/background"
    android:transitionName="transition_login"
    tools:context=".loginsignup.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="5dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="45sp"
            android:layout_marginTop="30dp"
            android:textAllCaps="true"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                app:boxStrokeColor="@color/color1"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeWidth="3dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorPrimary"
                app:startIconTint="@color/colorPrimary"
                app:startIconDrawable="@drawable/ic_outline_email_24"
                app:hintTextColor="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/muli"
                    android:textColor="@color/colorPrimary"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_below="@+id/loginphone"
                app:boxStrokeColor="@color/color1"
                app:boxStrokeWidthFocused="2dp"
                android:id="@+id/loginpassword"
                app:boxStrokeWidth="3dp"
                app:passwordToggleTint="@color/colorPrimary"
                app:passwordToggleEnabled="true"
                app:startIconTint="@color/colorPrimary"
                app:startIconDrawable="@drawable/ic_outline_lock_24"
                app:hintTextColor="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPasswordeditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli"
                    android:inputType="text"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/fgp"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/loginpassword"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:text="@string/Remember"
                    android:id="@+id/loginremember"
                    android:layout_centerVertical="true"
                    android:buttonTint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:id="@+id/loginforget"
                    android:onClick="callForgetPasswordActivity"
                    android:background="#00000000"
                    android:textColor="@color/colorPrimary"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>

            <Button
                android:id="@+id/loginbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fgp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="letUserLoggedIn"
                android:text="@string/login"
                android:textColor="@color/white"
                android:transitionName="transition_login"
                app:backgroundTint="@color/colorPrimary" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_accoun"
                android:id="@+id/create_account"
                android:layout_below="@id/loginbtn"
                android:background="#003c3024"
                android:onClick="callSignUpScreen"
                android:transitionName="transition_SignUp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:visibility="invisible"
                android:id="@+id/pbae"
                android:elevation="8dp"
                android:background="@drawable/circle"
                android:layout_centerInParent="true"
                >
                <ProgressBar
                    android:layout_width="30dp"
                    android:outlineSpotShadowColor="#ffffff"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>
    </LinearLayout>

</ScrollView>